# uniffi-bindgen-cs

./: .gitallowed  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker.sh  docker_build.sh  docker_test_bindings.sh  generate_bindings.sh  run_unit_tests.sh  rust-toolchain.toml  test_bindings.sh  uniffi-test-fixtures.toml
.github/: copilot-instructions.md
.github/workflows/: cs.yml  rust.yml
bindgen/: Cargo.toml  askama.toml
bindgen/src/: lib.rs  main.rs
bindgen/src/gen_cs/: callback_interface.rs  compounds.rs  custom.rs  enum_.rs  error.rs  external.rs  filters.rs  formatting.rs  miscellany.rs  mod.rs  object.rs  primitives.rs  record.rs
bindgen/templates/: Async.cs  BigEndianStream.cs  BytesTemplate.cs  CallbackInterfaceImpl.cs  CallbackInterfaceRuntime.cs  CallbackInterfaceTemplate.cs  CallbackResponseStatus.cs  ConcurrentHandleMap.cs  CustomTypeTemplate.cs  DurationHelper.cs  EnumTemplate.cs  ErrorTemplate.cs  ExternalObjectTypeTemplate.cs  ExternalTypeTemplate.cs  FfiConverterTemplate.cs  Float32Helper.cs  Float64Helper.cs  Helpers.cs  Int16Helper.cs  Int32Helper.cs  Int64Helper.cs  Int8Helper.cs  MapTemplate.cs  NamespaceLibraryTemplate.cs  ObjectRuntime.cs  ObjectTemplate.cs  OptionalTemplate.cs  RecordTemplate.cs  RustBufferTemplate.cs  SequenceTemplate.cs  StringHelper.cs  TimestampHelper.cs  TopLevelFunctionTemplate.cs  Types.cs  UInt16Helper.cs  UInt32Helper.cs  UInt64Helper.cs  UInt8Helper.cs  macros.cs  wrapper.cs
details/: 1-empty-list-as-default-method-parameter.md
docs/: CONFIGURATION.md  RELEASE.md  VERSION_UPGRADE.md
dotnet-tests/: .editorconfig  UniffiCS.sln  dotnet-tests.sln
dotnet-tests/UniffiCS/: UniffiCS.csproj
dotnet-tests/UniffiCS.BindingTests/: CustomTestFramework.cs  OptionalParameterTests.cs  TestArithmetic.cs  TestAsyncCallbackInterface.cs  TestBigEndianStream.cs  TestCallbacks.cs  TestCallbacksFixture.cs  TestChronological.cs  TestCoverall.cs  TestCsharpGapFixes.cs  TestCustomTypes.cs  TestCustomTypesBuiltin.cs  TestDiagnosticTestStartEnd.cs  TestDisposable.cs  TestDocstring.cs  TestEnumVariantFieldNameConflict.cs  TestErrorTypes.cs  TestExtTypesCSharp.cs  TestFutures.cs  TestGeometry.cs  TestGlobalMethodsClassName.cs  TestIssue110.cs  TestIssue152.cs  TestIssue28.cs  TestIssue60.cs  TestIssue75.cs  TestIssue76.cs  TestLibtelio.cs  TestLoroFfiCompat.cs  TestNestedSequences.cs  TestNullToEmptyString.cs  TestNumericLimits.cs  TestPositionalEnums.cs  TestRegressions.cs  TestReprEnums.cs  TestRondpoint.cs  TestSprites.cs  TestTodoList.cs  TestTraitMethod.cs  TestTraits.cs  (+3 more)
dotnet-tests/UniffiCS.Tests/: TestBigEndianStream.cs  UniffiCS.Tests.csproj
dotnet-tests/UniffiCS.binding_tests/: OptionalParameterTests.cs  TestArithmetic.cs  TestBytesType.cs  TestCallbacks.cs  TestCallbacksFixture.cs  TestChronological.cs  TestCoverall.cs  TestCustomTypes.cs  TestCustomTypesBuiltin.cs  TestDisposable.cs  TestDocstring.cs  TestExternalTypes.cs  TestGeometry.cs  TestGlobalMethodsClassName.cs  TestRondpoint.cs  TestSprites.cs  TestTodoList.cs  TestTraitMethod.cs  UniffiCS.binding_tests.csproj  Usings.cs
fixtures/: Cargo.toml
fixtures/bytes-type/: Cargo.toml  build.rs
fixtures/bytes-type/src/: bytes_type.udl  lib.rs
fixtures/custom-types-builtin/: Cargo.toml  build.rs
fixtures/custom-types-builtin/src/: custom-types-builtin.udl  custom_types_builtin.udl  lib.rs
fixtures/disposable/: Cargo.toml  build.rs
fixtures/disposable/src/: disposable.udl  lib.rs
fixtures/ext-types-csharp/base-crate/: Cargo.toml
fixtures/ext-types-csharp/base-crate/src/: lib.rs
fixtures/ext-types-csharp/consumer-crate/: Cargo.toml
fixtures/ext-types-csharp/consumer-crate/src/: lib.rs
fixtures/global-methods-class-name/: Cargo.toml  build.rs  uniffi.toml
fixtures/global-methods-class-name/src/: global_methods_class_name.udl  lib.rs
fixtures/nested-sequences/: Cargo.toml
fixtures/nested-sequences/src/: lib.rs
fixtures/null-to-empty-string/: Cargo.toml  build.rs  uniffi.toml
fixtures/null-to-empty-string/src/: lib.rs  null_to_empty_string.udl
fixtures/optional-parameters/: Cargo.toml
fixtures/optional-parameters/src/: lib.rs
fixtures/positional-enums/: Cargo.toml
fixtures/positional-enums/src/: lib.rs
fixtures/regressions/csharp-gap-fixes/: Cargo.toml  README.md  build.rs
fixtures/regressions/csharp-gap-fixes/src/: csharp-gap-fixes.udl  lib.rs
fixtures/regressions/enum-variant-field-name-conflict/: Cargo.toml
fixtures/regressions/enum-variant-field-name-conflict/src/: lib.rs
fixtures/regressions/issue-110/: Cargo.toml  README.md  build.rs
fixtures/regressions/issue-110/src/: issue-110.udl  lib.rs
fixtures/regressions/issue-152/: Cargo.toml  README.md
fixtures/regressions/issue-152/src/: lib.rs
fixtures/regressions/issue-165/: Cargo.toml
fixtures/regressions/issue-165/src/: lib.rs
fixtures/regressions/issue-28/: Cargo.toml  README.md  build.rs
fixtures/regressions/issue-28/src/: issue-28.udl  lib.rs
fixtures/regressions/issue-60/: Cargo.toml  README.md
fixtures/regressions/issue-60/src/: lib.rs
fixtures/regressions/issue-75/: Cargo.toml  README.md
fixtures/regressions/issue-75/src/: lib.rs
fixtures/regressions/issue-76/: Cargo.toml  README.md
fixtures/regressions/issue-76/src/: lib.rs
fixtures/regressions/libtelio/: Cargo.toml  README.md  build.rs
fixtures/regressions/libtelio/src/: features.rs  lib.rs  libtelio.udl  types.rs
fixtures/regressions/loro-ffi-compat/: Cargo.toml
fixtures/repr-enums/: Cargo.toml
fixtures/repr-enums/src/: lib.rs
fixtures/src/: lib.rs
fixtures/stringify/: Cargo.toml
fixtures/stringify/src/: lib.rs
src/: uniffi_fixtures.rs
templates/: BooleanHelper.cs  CallbackInterfaceTemplate.cs  ErrorTemplate.cs  Float64Helper.cs  Int16Helper.cs  Int32Helper.cs  MapTemplate.cs  NamespaceLibraryTemplate.cs  ObjectRuntime.cs  ObjectTemplate.cs  RecordTemplate.cs  RustBufferTemplate.cs  SequenceTemplate.cs  TopLevelFunctionTemplate.cs  UInt16Helper.cs  macros.cs  wrapper.cs
(+9 files in other folders)
