[workspace]
resolver = "2"

members = [
    "bindgen",
    "fixtures",
]

[workspace.dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
uniffi_testing = "0.29.4"
uniffi_macros = "0.29.4"
uniffi_build = { version = "0.29.4", features=["builtin-bindgen"] }
uniffi_bindgen = "0.29.4"
uniffi_meta = "0.29.4"
uniffi_udl = "0.29.4"