[workspace]
resolver = "2"

members = [
    "bindgen",
    "fixtures",
]

[workspace.dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
uniffi_testing = "0.31.0"
uniffi_macros = "0.31.0"
uniffi_build = { version = "0.31.0", features=["builtin-bindgen"] }
uniffi_bindgen = "0.31.0"
uniffi_meta = "0.31.0"
uniffi_udl = "0.31.0"
