[package]
name = "uniffi-bindgen-cs"
version = "0.6.0+v0.25.0"
edition = "2021"

[lib]
name = "uniffi_bindgen_cs"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen-cs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askama = { version = "0.11", default-features = false, features = ["config"] }
camino = "1.0.8"
clap = { version = "3.1", features = ["cargo", "std", "derive"] }
extend = "1.1"
fs-err = "2.7.0"
heck = "0.4"
paste = "1.0"
serde = "1"
serde_json = "1.0.0"
textwrap = "0.16"
toml = "0.5"
uniffi_bindgen = { path = "../3rd-party/uniffi-rs/uniffi_bindgen" }
