[package]
name = "uniffi-bindgen-cs"
version = "0.10.0+v0.30.0"
edition = "2021"

[lib]
name = "uniffi_bindgen_cs"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen-cs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askama = { version = "0.13", default-features = false, features = ["config", "derive", "alloc"] }
camino = "1.0.8"
cargo_metadata = "0.19"
clap = { version = "3.1", features = ["cargo", "std", "derive"] }
extend = "1.1"
fs-err = "2.7.0"
heck = "0.4"
paste = "1.0"
serde = "1"
serde_json = "1.0.0"
textwrap = "0.16"
toml = ">=0.8, <=0.9"

uniffi_bindgen.workspace = true
uniffi_meta.workspace = true
uniffi_udl.workspace = true