[package]
name = "uniffi-bindgen-cs-fixtures"
version = "0.1.0"
edition = "2021"

[lib]
name = "uniffi_fixtures"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
global-methods-class-name = { path = "global-methods-class-name" }
uniffi-cs-custom-types-builtin = { path = "custom-types-builtin" }
uniffi-cs-disposable-fixture = { path = "disposable" }
uniffi-cs-optional-parameters-fixture = { path = "optional-parameters" }
uniffi-cs-stringify = { path = "stringify" }
uniffi-example-arithmetic = { path = "../3rd-party/uniffi-rs/examples/arithmetic" }
uniffi-example-callbacks = { path = "../3rd-party/uniffi-rs/examples/callbacks" }
uniffi-example-custom-types = { path = "../3rd-party/uniffi-rs/examples/custom-types" }
uniffi-example-geometry = { path = "../3rd-party/uniffi-rs/examples/geometry/" }
uniffi-example-rondpoint = { path = "../3rd-party/uniffi-rs/examples/rondpoint" }
uniffi-example-sprites = { path = "../3rd-party/uniffi-rs/examples/sprites" }
uniffi-example-todolist = { path = "../3rd-party/uniffi-rs/examples/todolist" }
uniffi-fixture-callbacks = { path = "../3rd-party/uniffi-rs/fixtures/callbacks" }
uniffi-fixture-coverall = { path = "../3rd-party/uniffi-rs/fixtures/coverall" }
uniffi-fixture-docstring = { path = "../3rd-party/uniffi-rs/fixtures/docstring" }
uniffi-fixture-time = { path = "../3rd-party/uniffi-rs/fixtures/uniffi-fixture-time" }
uniffi-fixture-trait-methods = { path = "../3rd-party/uniffi-rs/fixtures/trait-methods" }
