[package]
name = "uniffi-cs-disposable-fixture"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_cs_disposable"

[dependencies]
uniffi_macros = {path = "../../3rd-party/uniffi-rs/uniffi_macros"}
uniffi = {path = "../../3rd-party/uniffi-rs/uniffi", features=["builtin-bindgen"]}
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi_build = {path = "../../3rd-party/uniffi-rs/uniffi_build", features=["builtin-bindgen"]}
