[package]
name = "nested-sequences"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "nested_sequences"

[dependencies]
uniffi = { workspace = true, features = ["build"] }
uniffi_macros.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
