[package]
name = "uniffi-cs-positional-enums"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_cs_positional_enums"

[dependencies]
uniffi = { workspace = true, features = ["build"] }
uniffi_macros.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }