[package]
name = "csharp-gap-fixes"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "csharp_gap_fixes"

[dependencies]
uniffi = { workspace = true, features = ["build"] }
uniffi_macros.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
