[package]
name = "libtelio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
name = "libtelio"

[dependencies]
anyhow = "1"
base64 = "0.22"
hex = "0.4.3"
ipnet = { version = "2.11", features = ["serde"] }
num_enum = "0.7"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.7.1"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
serde_with = { features = ["macros"], default-features = false, version = "3.12.0" }
thiserror = "2"
uniffi = { workspace = true, features = ["build"] }
uniffi_macros.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
